--- a/todo
+++ b/todo
@@ -1,4 +1,2 @@
-- Ajouté des events à InventoryListener
-- ajouté config fr/es ..
 - ajouter traduction effects
-- ajouter traduction du temps
+- ajouter message + invisibilité pour quand on est freeze
